<resources>
    <string name="app_name">Kiteng3</string>
    <string name="no_net">no internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">signup</string>
    <string name="login">login</string>
    <string name="lets_get_you_started">Lets Get You Started</string>
    <string name="image_of_food">image of food</string>
    <string name="login_text">Dont Have An Account? Sign Up.</string>
    <string name="janedoe_email_com">janedoe@email.com</string>
    <string name="Password">password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="signups">Already have an account? Sign In</string>
    <string name="forgot_help">We have sent a instructions email to your email. Having problems?</string>
    <string name="forgott">Enter your email address and we will send you a reset instructions.</string>
    <string name="john_doe">John Doe</string>
    <string name="terms"><![CDATA[By Signing up you agree to our Terms Conditions & Privacy Policy.]]></string>
    <string name="_2547189562">7189562</string>
    <string name="verify_phone_number_text">Verify phone number</string>
    <string name="enter_the_4_digit_code_sent_to_you_t0_1501333982">Enter the 4-Digit code sent to you t0 +1501333982</string>
    <string name="didn_t_receive_code">Didn’t receive code? Resend in 0:59</string>
    <string name="find_restaurants_near_you">Find restaurants near you</string>
    <string name="please_enter_your_location_or_allow_access_to_your_location_to_find_restaurants_near_you">Please enter your location or allow access to your location to find restaurants near you.</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="title_client">client_app</string>
    <string name="title_vendor">vendor_app</string>

    <!-- Preferences -->
    <string name="settings_label">Settings</string>

    <string name="preference_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_theme_title">Theme</string>

    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="auto_battery_value" translatable="false">Auto-battery</string>
    <string name="follow_system_value" translatable="false">System</string>
    <string name="client">Browse Market</string>
    <string name="vendor">Become Vendor</string>
    <string name="choose_who_you_want_to_be">Choose A Path.</string>
    <string name="you">You Will Be Able To Change Path Anytime.</string>
    <string name="title_activity_vendor">VendorActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="lets_sign_you_in">Lets Sign You In</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed!</string>
    <string name="create_an_account_to_continued">Create an account to continued</string>
    <string name="getting_started">Getting Started</string>
</resources>