<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/purple_700"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".ui.fragment.SignUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="0dp" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:src="@drawable/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/create_an_account_to_continued"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tile" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/signup_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/john_doe"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toTopOf="@+id/guideline57"
                    app:startIconDrawable="@drawable/icon_24_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/fullname">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/login_ccp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:transitionName="slider"
                        app:ccpDialog_backgroundColor="@color/white"
                        app:ccpDialog_textColor="@color/purple_700"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_contentColor="@color/purple_500"
                        app:ccp_customMasterCountries="KE,TZ,UG,RW,ET,ER"
                        app:ccp_rememberLastSelection="true"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/_2547189562"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/login_ccp"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/janedoe_email_com"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/email_address"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signup_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:text="@string/signup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:cornerRadius="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/password_toggle" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/terms"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/signup_signup" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/terms" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_in_fb"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/purple_700"
                    app:cornerRadius="32dp"
                    app:icon="@drawable/facebook"
                    app:iconTint="@null"
                    app:layout_constraintBottom_toTopOf="@+id/log_in_google"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/or"
                    app:layout_constraintVertical_bias="0.16000003"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:strokeColor="@color/purple_500"
                    tools:text="Facebook" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_in_google"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/purple_700"
                    app:cornerRadius="32dp"
                    app:icon="@drawable/google"
                    app:iconTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/log_in_fb"
                    app:strokeColor="@color/purple_500"
                    tools:text="Google" />

                <TextView
                    android:id="@+id/signup_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/signups"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline61"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/log_in_google"
                    tools:text="Already have an account? Sign In" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

